added whatsapp contact

--- a/src/app/main-dash/main-dash.html
+++ b/src/app/main-dash/main-dash.html
@@ -130,6 +130,11 @@
           <h4>Email</h4>
           <p><a href="mailto:saccsatish@gmail.com">saccsatish@gmail.com</a></p>
         </div>
+         <div class="contact-icon">🟢</div>
+        <div class="contact-details">
+          <h4>WhatsApp</h4>
+          <p><a href="https://wa.me/916362973337">+91 63629 73337</a></p>
+        </div>
       </div>
       <div class="contact-item">
         <div class="contact-icon">🌍</div>
@@ -196,3 +201,7 @@
     <p>&copy; 2025 Financial Solutions. All rights reserved.</p>
   </div>
 </footer>
+
+
+
+
