--- a/src/app/main-dash/main-dash.html
+++ b/src/app/main-dash/main-dash.html
@@ -2,7 +2,10 @@
 <nav class="navbar" role="navigation" aria-label="Main Navigation">
   <div class="nav-container">
     <div class="nav-logo">
-      <h2>💰 Financial Solutions</h2>
+      <div class="LogoImg" aria-hidden="true">
+         <img src="assets/images/Logo.png" alt="Portfolio Photo">
+      </div>
+      <h2>Financial Solutions</h2>
     </div>
     <div class="nav-menu">
       <a href="#home">Home</a>
@@ -21,6 +24,9 @@
     <div class="hero-inner">
       <!-- Left Side: Text -->
       <div class="hero-text">
+         <div class="LogoImg" aria-hidden="true">
+         <img src="assets/images/Logo.png" alt="Portfolio Photo">
+      </div>
         <h1 class="hero-title">Financial solutions for everyone by Ritesh Bijawat</h1>
         <p class="hero-subtitle">
          I am an MBA in Finance with a strong foundation in marketing and business operations, having started my professional journey with Asian Paints. My experience there helped me understand customer behavior, product enrichment, and strategic market positioning — skills that today strengthen my ability to offer client-focused financial and advisory solutions.
